# ClayEngineVKDemo

./: .gitignore  CMakeLists.txt  README.md
res/: compile_shader.sh
res/shaders/: Sprite.frag.glsl  Sprite.vert.glsl  Texture.frag.glsl
src/: DemoApp.cpp  DemoApp.h  main.cpp
src/scenes/basic_scene/: BasicScene.cpp  BasicScene.h  BasicSceneGUI.cpp  BasicSceneGUI.h
src/scenes/galaxy/: GalaxyScene.cpp  GalaxyScene.h  GalaxySceneGUI.cpp  GalaxySceneGUI.h  MoonEntity.cpp  MoonEntity.h  PlanetEntity.cpp  PlanetEntity.h  SunEntity.cpp  SunEntity.h
src/scenes/games/: GamesScene.cpp  GamesScene.h
src/scenes/menu_scene/: MenuScene.cpp  MenuScene.h
src/scenes/physX_scene/: PhysXScene.cpp  PhysXScene.h  PhysXSceneGUI.cpp  PhysXSceneGUI.h
src/scenes/physics_scene/: PhysicsScene.cpp  PhysicsScene.h  PhysicsSceneGUI.cpp  PhysicsSceneGUI.h
src/scenes/scene2d/: Scene2d.cpp  Scene2d.h
